cmake_minimum_required(VERSION 3.28)
project(CPP_DSA)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(cpp_grammar)
add_subdirectory(array)
add_subdirectory(linked_list)
add_subdirectory(hash_table)
add_subdirectory(string)
add_subdirectory(stack_and_queue)
add_subdirectory(binary_tree)
add_subdirectory(dynamic_programming)
add_subdirectory(backtracking)
add_subdirectory(greedy_algorithm)
add_subdirectory(graph_theory)
add_subdirectory(monotonic_stack)

add_subdirectory(REAL-QUESTIONS)