add_executable(binary_search binary_search.cpp)
add_executable(remove_element remove_element.cpp)
add_executable(square_of_ordered_array square_of_ordered_array.cpp)
add_executable(minimum_size_subarray_sum minimum_size_subarray_sum.cpp)
add_executable(spiral_matrix_ii spiral_matrix_ii.cpp)
add_executable(sum_of_sub_array sum_of_sub_array.cpp)
add_executable(purchase_land purchase_land.cpp)