add_executable(combinations combinations.cpp)
add_executable(combination_sum_iii combination_sum_iii.cpp)
add_executable(letter_combinations_of_a_phone_number letter_combinations_of_a_phone_number.cpp)
add_executable(combination_sum combination_sum.cpp)
add_executable(combination_sum_ii combination_sum_ii.cpp)
add_executable(palindrome_partitioning palindrome_partitioning.cpp)
add_executable(restore_ip_addresses restore_ip_addresses.cpp)
add_executable(subsets subsets.cpp)
add_executable(subsets_ii subsets_ii.cpp)
add_executable(non_decreasing_subsequences non_decreasing_subsequences.cpp)
add_executable(permutations permutations.cpp)
add_executable(permutations_ii permutations_ii.cpp)
add_executable(reconstruct_itinerary reconstruct_itinerary.cpp)
add_executable(n_queens n_queens.cpp)
add_executable(sudoku_solver sudoku_solver.cpp)