add_executable(climbing_stairs climbing_stairs.cpp)
add_executable(min_cost_climbing_stairs min_cost_climbing_stairs.cpp)
add_executable(unique_paths unique_paths.cpp)
add_executable(unique_paths_ii unique_paths_ii.cpp)
add_executable(integer_break integer_break.cpp)
add_executable(unique_binary_search_trees unique_binary_search_trees.cpp)
add_executable(01_knapsack_2D 01_knapsack_2D.cpp)
add_executable(01_knapsack_1D 01_knapsack_1D.cpp)
add_executable(partition_equal_subset_sum partition_equal_subset_sum.cpp)
add_executable(last_stone_weight_ii last_stone_weight_ii.cpp)