add_executable(climbing_stairs climbing_stairs.cpp)
add_executable(min_cost_climbing_stairs min_cost_climbing_stairs.cpp)
add_executable(unique_paths unique_paths.cpp)
add_executable(unique_paths_ii unique_paths_ii.cpp)
add_executable(integer_break integer_break.cpp)
add_executable(unique_binary_search_trees unique_binary_search_trees.cpp)
add_executable(01_knapsack_2D 01_knapsack_2D.cpp)
add_executable(01_knapsack_1D 01_knapsack_1D.cpp)
add_executable(partition_equal_subset_sum partition_equal_subset_sum.cpp)
add_executable(last_stone_weight_ii last_stone_weight_ii.cpp)
add_executable(target_sum target_sum.cpp)
add_executable(ones_and_zeroes ones_and_zeroes.cpp)
add_executable(complete_knapsack complete_knapsack.cpp)
add_executable(coin_change_ii coin_change_ii.cpp)
add_executable(combination_sum_iv combination_sum_iv.cpp)
add_executable(climbing_stairs_ii climbing_stairs_ii.cpp)
add_executable(coin_change coin_change.cpp)
add_executable(perfect_squares perfect_squares.cpp)
add_executable(word_break word_break.cpp)


add_executable(longest_increasing_subsequence longest_increasing_subsequence.cpp)
add_executable(longest_continuous_increasing_subsequence longest_continuous_increasing_subsequence.cpp)
add_executable(maximum_length_of_repeated_subarray maximum_length_of_repeated_subarray.cpp)
add_executable(longest_common_subsequence longest_common_subsequence.cpp)
add_executable(maximum_subarray_dp maximum_subarray_dp.cpp)
add_executable(is_subsequence is_subsequence.cpp)
add_executable(distinct_subsequences distinct_subsequences.cpp)
add_executable(delete_operation_for_two_strings delete_operation_for_two_strings.cpp)
add_executable(edit_distance edit_distance.cpp)