add_executable(all_paths_from_source_to_target all_paths_from_source_to_target.cpp)
add_executable(number_of_islands_dfs number_of_islands_dfs.cpp)
add_executable(number_of_islands_bfs number_of_islands_bfs.cpp)
add_executable(total_squares_of_isolated_islands total_squares_of_isolated_islands.cpp)
add_executable(waterflow_problem waterflow_problem.cpp)
add_executable(construct_largest_island construct_largest_island.cpp)
add_executable(word_ladder word_ladder.cpp)
add_executable(full_accessibility_of_directed_graphs full_accessibility_of_directed_graphs.cpp)
add_executable(find_a_existing_path find_a_existing_path.cpp)
add_executable(redundant_connection redundant_connection.cpp)
add_executable(redundant_connection_ii redundant_connection_ii.cpp)