add_executable(definition definition.cpp)

include_directories(.)  # This is to include the header files in the current directory

add_executable(reverse_linked_list reverse_linked_list.cpp)
add_executable(swap_nodes_in_pairs swap_nodes_in_pairs.cpp)
add_executable(remove_nth_node_from_end_of_list remove_nth_node_from_end_of_list.cpp)
add_executable(intersection_of_two_linked_lists intersection_of_two_linked_lists.cpp)
add_executable(linked_list_cycle linked_list_cycle.cpp)